--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,11 +1,37 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center">
+<android.support.design.widget.CoordinatorLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:id="@+id/coordinatorlayout"
+	android:background="@drawable/background"
+	>
+	<android.support.design.widget.AppBarLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		app:elevation="0px"
+		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+		>
+		
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+			app:layout_scrollFlags="scroll|enterAlways|snap"
+			android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            />
+		<android.support.design.widget.TabLayout
+			android:id="@+id/tablayout"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			app:tabSelectedTextColor="?attr/colorControlNormal"
+			app:tabTextColor="?android:attr/textColorSecondary"/>
+			</android.support.design.widget.AppBarLayout>
+	
+	<android.support.v4.view.ViewPager
+		app:layout_behavior="@string/appbar_scrolling_view_behavior"
+		
+		android:id="@+id/viewpager"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"/>
+</android.support.design.widget.CoordinatorLayout>
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-</LinearLayout>
