添加加载更多布局，修复流水布局bug

--- a/app/src/main/res/layout/app_bar_layout.xml
+++ b/app/src/main/res/layout/app_bar_layout.xml
@@ -7,6 +7,7 @@
 	app:elevation="0px">
 
 	<android.support.v7.widget.Toolbar
+		android:theme="@style/toolbar"
 		android:id="@+id/toolbar"
 		android:layout_width="match_parent"
 		android:layout_height="?attr/actionBarSize"/>
