--- a/app/src/main/res/layout-land/newtimer.xml
+++ b/app/src/main/res/layout-land/newtimer.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<com.moe.widget.SlideLayout 
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	android:id="@+id/slide"
+	android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+>
+
+	<android.support.design.widget.CoordinatorLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:id="@+id/coordinatorlayout"
-	android:background="@drawable/background"
+	android:layout_gravity="start"
 	android:fitsSystemWindows="true">
 
 	<include layout="@layout/app_bar_layout"/>
@@ -32,6 +40,7 @@
 				android:layout_width="match_parent"/>
 -->
 			<RelativeLayout
+				android:visibility="gone"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:minHeight="?attr/listPreferredItemHeightSmall">
@@ -47,6 +56,7 @@
 					android:layout_centerVertical="true"/>
 
 				<EditText
+					android:id="@+id/timer_name"
 					android:layout_centerVertical="true"
 					android:layout_toEndOf="@id/id_name0"
 					android:layout_width="match_parent"
@@ -61,6 +71,10 @@
 				android:layout_width="match_parent"/>
 
 			<RelativeLayout
+				android:paddingTop="8dp"
+				android:paddingBottom="8dp"
+				android:paddingEnd="16dp"
+				
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:minHeight="?attr/listPreferredItemHeightSmall">
@@ -76,6 +90,7 @@
 					android:layout_centerVertical="true"/>
 
 				<Spinner
+					android:id="@+id/timer_mode"
 					android:layout_centerVertical="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
@@ -92,6 +107,10 @@
 				android:layout_width="match_parent"/>
 
 			<RelativeLayout
+				android:paddingTop="8dp"
+				android:paddingBottom="8dp"
+				android:paddingEnd="16dp"
+				
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:minHeight="?attr/listPreferredItemHeightSmall">
@@ -107,7 +126,7 @@
 					android:layout_centerVertical="true"/>
 
 				<TextView
-					android:id="@+id/select_task"
+					android:id="@+id/timer_selected_task"
 					android:paddingStart="?attr/cellSpacing"
 					android:layout_centerVertical="true"
 					android:layout_toEndOf="@id/id_name2"
@@ -131,6 +150,10 @@
 				android:layout_width="match_parent"/>
 
 			<RelativeLayout
+				android:paddingTop="8dp"
+				android:paddingBottom="8dp"
+				android:paddingEnd="16dp"
+				
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:minHeight="?attr/listPreferredItemHeightSmall">
@@ -146,6 +169,7 @@
 					android:layout_centerVertical="true"/>
 
 				<EditText
+					android:id="@+id/timer_summary"
 					android:layout_centerVertical="true"
 					android:layout_toEndOf="@id/id_name3"
 					android:layout_width="match_parent"
@@ -208,4 +232,4 @@
 	</ScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
-
+</com.moe.widget.SlideLayout>
