--- a/app/src/main/res/layout-port/newtimer.xml
+++ b/app/src/main/res/layout-port/newtimer.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<com.moe.widget.SlideLayout 
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	android:id="@+id/slide"
+	android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+>
+<android.support.design.widget.CoordinatorLayout
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:id="@+id/coordinatorlayout"
-	android:background="@drawable/background"
-	android:fitsSystemWindows="true">
+	android:fitsSystemWindows="true"
+	android:layout_gravity="start">
 
 	<include layout="@layout/app_bar_layout"/>
 	<ScrollView
@@ -28,6 +33,7 @@
 				android:layout_width="match_parent"/>
 -->
 			<RelativeLayout
+				android:visibility="gone"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:minHeight="?attr/listPreferredItemHeightSmall">
@@ -43,6 +49,7 @@
 					android:layout_centerVertical="true"/>
 
 				<EditText
+					android:id="@+id/timer_name"
 					android:layout_centerVertical="true"
 					android:layout_toEndOf="@id/id_name0"
 					android:layout_width="match_parent"
@@ -57,6 +64,9 @@
 				android:layout_width="match_parent"/>
 
 			<RelativeLayout
+				android:paddingTop="8dp"
+				android:paddingBottom="8dp"
+				android:paddingEnd="16dp"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:minHeight="?attr/listPreferredItemHeightSmall">
@@ -72,6 +82,7 @@
 					android:layout_centerVertical="true"/>
 
 				<Spinner
+					android:id="@+id/timer_mode"
 					android:layout_centerVertical="true"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
@@ -88,6 +99,10 @@
 				android:layout_width="match_parent"/>
 
 			<RelativeLayout
+				android:paddingTop="8dp"
+				android:paddingBottom="8dp"
+				android:paddingEnd="16dp"
+				
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:minHeight="?attr/listPreferredItemHeightSmall">
@@ -103,7 +118,7 @@
 					android:layout_centerVertical="true"/>
 
 				<TextView
-					android:id="@+id/select_task"
+					android:id="@+id/timer_selected_task"
 					android:paddingStart="?attr/cellSpacing"
 					android:layout_centerVertical="true"
 					android:layout_toEndOf="@id/id_name2"
@@ -127,6 +142,10 @@
 				android:layout_width="match_parent"/>
 
 			<RelativeLayout
+				android:paddingTop="8dp"
+				android:paddingBottom="8dp"
+				android:paddingEnd="16dp"
+				
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:minHeight="?attr/listPreferredItemHeightSmall">
@@ -142,6 +161,7 @@
 					android:layout_centerVertical="true"/>
 
 				<EditText
+					android:id="@+id/timer_summary"
 					android:layout_centerVertical="true"
 					android:layout_toEndOf="@id/id_name3"
 					android:layout_width="match_parent"
@@ -197,4 +217,4 @@
 	</ScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
-
+</com.moe.widget.SlideLayout>
