--- a/app/src/main/res/layout/list_timer_item.xml
+++ b/app/src/main/res/layout/list_timer_item.xml
@@ -3,14 +3,13 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:minHeight="?attr/listPreferredItemHeight"
-	app:cardCornerRadius="3dp"
-	app:cardBackgroundColor="@color/card_background"
+	app:cardCornerRadius="2dp"
+	app:cardBackgroundColor="#3d000000"
+	app:cardElevation="0px"
+	android:foreground="?attr/selectableItemBackground"
 >
 
 	<RelativeLayout
-		android:paddingStart="5dp"
-		android:paddingEnd="5dp"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:layout_gravity="center_vertical">
@@ -23,6 +22,7 @@
 			android:orientation="vertical">
 
 			<TextView
+				android:textSize="@dimen/textTitle"
 				android:textColor="?android:attr/textColorPrimary"
 				android:text="测试"
 				android:id="@+android:id/title"
@@ -35,8 +35,8 @@
 			android:id="@+id/switch_tasker"
 			android:layout_centerVertical="true"
 			android:layout_alignParentEnd="true"
-			android:layout_width="?attr/listPreferredItemHeightSmall"
-			android:layout_height="?attr/listPreferredItemHeightSmall"/>
+			android:layout_width="wrap_content"
+			android:layout_height="40dp"/>
 
 	</RelativeLayout>
 
