--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,10 +1,14 @@
-<android.support.design.widget.CoordinatorLayout
+<com.moe.widget.BackgroundLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:id="@+android:id/background"
+	android:background="@drawable/test">
+<android.support.design.widget.CoordinatorLayout
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
 	android:id="@+id/coordinatorlayout"
-	android:background="@drawable/background"
 	>
 	<android.support.design.widget.AppBarLayout
 		android:layout_width="match_parent"
@@ -14,6 +18,7 @@
 		>
 		
         <android.support.v7.widget.Toolbar
+			android:theme="@style/toolbar"
             android:id="@+id/toolbar"
 			app:layout_scrollFlags="scroll|enterAlways|snap"
 			android:layout_width="match_parent"
@@ -34,4 +39,4 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"/>
 </android.support.design.widget.CoordinatorLayout>
-
+</com.moe.widget.BackgroundLayout>
