--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="parent">
+    <style name="AppTheme" parent="@style/parent">
 		
 		</style>
-	<style name="parent" parent="Theme.AppCompat.Light.DarkActionBar">
+	<style name="parent" parent="@style/Theme.AppCompat.Light.DarkActionBar">
 		<item name="windowNoTitle">true</item>
 		<item name="windowActionBar">false</item>
 		<item name="colorPrimary">@android:color/transparent</item>  
@@ -15,28 +15,34 @@
 		<!--<item name="android:statusBarColor">@color/icons</item>-->
 		<item name="android:textColorPrimary">@color/primary_text</item>
 		<item name="android:textColorSecondary">@color/secondary_text</item>
-		<item name="colorControlNormal">@color/icons</item>
-		<item name="colorControlHighlight">@color/primary</item>
+		<item name="colorControlNormal">@color/high_light</item>
+		<item name="colorControlHighlight">@color/high_light</item>
 		<item name="colorControlActivated">@color/accent</item>
 		<item name="android:listDivider">@color/divider</item>
 		<item name="android:dividerHeight">1dp</item>
 		<!--<item name="preferenceTheme">@style/preference</item>-->
 		<!--<item name="preferenceStyle">@style/preference</item>
 		-->
-		<item name="cardElevation">2px</item>
+		<item name="cardElevation">1dp</item>
 		<item name="android:windowFrame">@null</item>
 		<item name="android:popupTheme">@style/popupTheme</item>
 		<item name="colorIcons">@color/icons</item>
 		<item name="cellSpacing">@dimen/cellSpacing</item>
 		<item name="android:textColor">@drawable/textcolor</item>
-		<item name="buttonTint">@drawable/textcolor</item>
-		<item name="android:buttonTint">@drawable/textcolor</item>
+		<!--<item name="buttonTint">@drawable/textcolor</item>-->
+		<!--<item name="android:buttonTint">@drawable/textcolor</item>-->
+		<item name="contentPaddingLeft">16dp</item>
+		<item name="contentPaddingRight">16dp</item>
+		<item name="contentPaddingTop">8dp</item>
+		<item name="contentPaddingBottom">8dp</item>
+		<item name="android:shadowRadius">1.0</item>
+		<item name="android:shadowColor">#ff000000</item>
 	</style>
 	<style name="popupTheme" parent="@style/Theme.AppCompat.Light.Dialog">
 		<item name="colorControlNormal">@color/accent</item>
-		<item name="colorControlHighlight">@color/primary_dark</item>
-		<item name="colorControlActivated">@color/primary</item>
-		
+		<item name="colorControlHighlight">@color/high_light</item>
+		<item name="colorControlActivated">@color/accent</item>
+		<item name="android:textColorPrimary">@color/primary_text</item>
 	</style>
 	<!--<style name="preference" parent="parent">
 		<item name="preferenceScreenStyle">@style/Preference.PreferenceScreen</item>
@@ -58,50 +64,14 @@
 		<item name="spinBars">true</item>
 		<item name="color">@android:color/white</item>
 	</style>
-	<style name="FloatActivity" parent="@style/AppTheme">
-		<item name="android:backgroundDimEnabled">true</item>
-		<item name="android:windowIsFloating">true</item>
-		<item name="android:windowAnimationStyle">@style/activityAnime</item>
-		<item name="android:windowFrame">@null</item>
-		<item name="android:windowBackground">@null</item>
-	</style>
-	
-	<style name="activityAnime">
-		<item name="android:activityOpenEnterAnimation">@null</item> 
-		<item name="android:activityOpenExitAnimation">@null</item> 
-		<item name="android:activityCloseEnterAnimation">@null</item> 
-		<item name="android:activityCloseExitAnimation">@null</item> 
-		<item name="android:taskOpenEnterAnimation">@null</item> 
-		<item name="android:taskOpenExitAnimation">@null</item> 
-		<item name="android:taskCloseEnterAnimation">@null</item> 
-		<item name="android:taskCloseExitAnimation">@null</item> 
-		<item name="android:taskToFrontEnterAnimation">@null</item> 
-		<item name="android:taskToFrontExitAnimation">@null</item> 
-		<item name="android:taskToBackEnterAnimation">@null</item> 
-		<item name="android:taskToBackExitAnimation">@null</item> 
-		<!--<item name="android:windowEnterAnimation">@anim/window_enter</item>
-		<item name="android:windowExitAnimation">@anim/window_exit</item>-->
-
-	</style>
 	
 	<style name="toolbar" parent="AppTheme">
 		<item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
-		
+		<item name="android:textColorPrimary">@color/icons</item>
 		<item name="colorControlNormal">@color/icons</item>
+		<item name="colorControlActivated">@color/accent</item>
 		<item name="colorControlHighlight">@color/accent</item>
 		<item name="titleTextAppearance">?android:attr/textAppearance</item>
 	</style>
-	<!--<style name="EditText" parent="AppTheme">
-		<item name="android:textCursorDrawable">?android:attr/colorControlHighlight</item>
-		<item name="android:textSelectHandle">?android:attr/colorControlHighlight</item>
-		<item name="android:textColor">#ffffff</item>
-		<item name="android:background">@android:color/transparent</item>
-	</style>
-	<style name="dialog" parent="AppTheme">
-        <item name="android:windowAnimationStyle">@style/dialog_animation</item>
-	</style>
-	<style name="dialog_animation" parent="@android:style/Animation.Dialog">
-        <item name="android:windowEnterAnimation">@anim/fade_in</item>
-        <item name="android:windowExitAnimation">@anim/fade_out</item>
-    </style>-->
+	
 </resources>
